# course-project-py

./: Main.java  accounts.py  budget.csv  client.csv  client.txt  completed.txt  course_project.py  director_menu.py  google_api.py  key.json  main.py  manager_menu.py  manager_task.txt  marketer_menu.py  menus.py  pyproject.toml  tasks.txt  testing.py  worker_menu.py  workerr.csv  workers.csv  workers.txt
Course/: completed.txt  initial_version.py  main.py  menus.py  pyproject.toml  tasks.txt  testing.py  worker.txt
