[tool.poetry]
name = "repl_python3_course-work"
version = "0.1.0"
description = ""
authors = ["ojbgrsx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
excel = "^1.0.0"
salary = "^2.0"
pandas = "^1.3.4"
openpyxl = "^3.0.9"
google-api-python-client = "^2.29.0"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
